<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.application.footballbetting.BetGuide"
    android:layout_centerInParent="true"
    android:background="@drawable/gradient"
    tools:ignore="MissingDefaultResource">


    <ImageView
        android:id="@+id/cl1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_baseline_close_24"
        android:layout_gravity="right"
        android:backgroundTint="@color/black"
        android:layout_margin="15dp"
        android:contentDescription="@string/close_button"/>

    <TextView
        android:layout_margin="20dp"
        android:id="@+id/title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25dp"
        android:text="@string/bgt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/content"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/bg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>